# OLMo2-plasticity-jax

./: .gitignore  LICENSE  README.md  pyproject.toml
results/: README.md
src/eval/: _common.py
src/eval/data/agi_eval/: fewshot.json
src/eval/data/sft/: gsm8k_8shot.json  math_minerva_4shot.json  popqa_fewshot.json  truthfulqa_6shot.json
src/eval/data/sft/bbh/: _descriptions.json  boolean_expressions.json  causal_judgement.json  date_understanding.json  disambiguation_qa.json  dyck_languages.json  formal_fallacies.json  geometric_shapes.json  hyperbaton.json  logical_deduction_seven_objects.json  movie_recommendation.json  multistep_arithmetic_two.json  navigate.json  object_counting.json  penguins_in_a_table.json  reasoning_about_colored_objects.json  ruin_names.json  salient_translation_error_detection.json  snarks.json  (+5 more)
src/eval/ifeval_lib/: instructions.py  instructions_registry.py  utils.py
src/eval/mid/: bench_agieval.py  bench_arc.py  bench_gsm8k.py  bench_hellaswag.py  bench_mmlu.py  bench_mmlu_pro.py  bench_naturalqs.py  bench_triviaqa.py  bench_winogrande.py
src/eval/scripts/: aggregate_our_sft.py  aggregate_results.py
src/eval/sft_evals/: _math_utils.py  _mmlu_diag.py  _sft_common.py  bench_bbh_sft.py  bench_drop_sft.py  bench_gsm8k_sft.py  bench_ifeval_sft.py  bench_math_sft.py  bench_mmlu_sft.py  bench_popqa_sft.py  bench_truthfulqa_sft.py
src/midtraining/: data.py  train.py
src/midtraining/scripts/: bake_global_shuffle.py  repack_dolmino.py
src/sft/: data.py  model.py  registry.py  train.py
src/sft/scripts/: eval_holdout_loss.py
