[project]
name = "plasticity"
version = "0.1.0"
description = "Measuring plasticity across training checkpoints via SFT on TPU"
requires-python = ">=3.11,<3.14"
dependencies = [
    "easydel[tpu]>=0.2.0",
    "transformers>=4.48",
    "tokenizers",
    "datasets",
    "huggingface_hub",
    "ray[default]>=2.40",
    "wandb",
    "requests",
]

[project.optional-dependencies]
dev = ["ruff", "ipython"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sft", "src/midtraining"]
